syntax = "proto3";
package DomainServices.SalesArrangementService.v1;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts.v1";

import "google/protobuf/empty.proto";
import "CustomerOnSA.proto";
import "CreateCustomer.proto";
import "CustomerOnSAIdRequest.proto";
import "GetCustomerList.proto";
import "UpdateCustomer.proto";

service CustomerOnSAService {
    // zalozeni noveho customera
	rpc CreateCustomer (DomainServices.SalesArrangementService.CreateCustomerRequest) returns (DomainServices.SalesArrangementService.CreateCustomerResponse);
	
	// smazat
	rpc DeleteCustomer (DomainServices.SalesArrangementService.CustomerOnSAIdRequest) returns (google.protobuf.Empty);
	
	// get single
	rpc GetCustomer (DomainServices.SalesArrangementService.CustomerOnSAIdRequest) returns (DomainServices.SalesArrangementService.CustomerOnSA);
	
	// get list
	rpc GetCustomerList (DomainServices.SalesArrangementService.GetCustomerListRequest) returns (DomainServices.SalesArrangementService.GetCustomerListResponse);
	
	// update
	rpc UpdateCustomer (DomainServices.SalesArrangementService.UpdateCustomerRequest) returns (google.protobuf.Empty);
}